--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,20 @@ nav {
     font-weight: 800;
 }
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 .text-primary {
     color: #FD6E0A;
 
@@ -48,15 +62,51 @@ nav a {
     font-weight: 700;
     padding: 15px 35px;
 }
-.header{
+
+.header {
     background: #f3e5db;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner .profile{
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner .profile {
     width: 500px;
 
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    margin: 130px 0px;
 }
