--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -102,11 +102,22 @@ nav a {
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
 
 /* about section styles */
 .about{
     padding: 130px;
     border-radius: 10px;
-    background: #fff8f3;
+    background: #f3e5db;
     margin: 130px 0px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
