--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -189,7 +189,25 @@ main section {
 }
 footer{
     display: flex;
+    gap: 100px;
     padding: 150px 200px;
     background: #f3e5db;
     margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+
+}
+.social-links a{
+    margin-right: 25px;
+}
+.contact input[type="text"], .contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: white;
+    border: 0;
+    width: 100%;
 }
